feat: added dynamic-pricing logic